--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,8 +1,8 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/DevMap.DevMap
-EditorStartupMap=/Game/DevMap.DevMap
+GameDefaultMap=/Game/System/DefaultEditorMap/L_DefaultEditorOverView.L_DefaultEditorOverView
+EditorStartupMap=/Game/System/DefaultEditorMap/L_DefaultEditorOverView.L_DefaultEditorOverView
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
