--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -3,6 +3,7 @@
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Game/System/DefaultEditorMap/L_DefaultEditorOverView.L_DefaultEditorOverView
 EditorStartupMap=/Game/System/DefaultEditorMap/L_DefaultEditorOverView.L_DefaultEditorOverView
+GlobalDefaultGameMode=/Script/JK2.JK2GameModeBase
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
