--- a/.gitignore
+++ b/.gitignore
@@ -47,6 +47,7 @@ SourceArt/**/*.tga
 Content/Characters
 Content/Weapons
 Content/ParagonKallari
+Content/ParagonGreystone
 
 # Binary Files
 Binaries/*
