[수정] Sparrow Asset 무시를 위한 .gitignore 수정

--- a/.gitignore
+++ b/.gitignore
@@ -47,6 +47,7 @@ SourceArt/**/*.tga
 Content/Characters
 Content/Weapons
 Content/ParagonKallari
+Content/ParagonSparrow
 Content/ParagonGreystone
 
 # Binary Files
