[수정] 게임인스턴스가 nullptr로 반환되는 점 수정

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -4,7 +4,7 @@
 GameDefaultMap=/Game/System/DefaultEditorMap/L_DefaultEditorOverView.L_DefaultEditorOverView
 EditorStartupMap=/Game/System/DefaultEditorMap/L_DefaultEditorOverView.L_DefaultEditorOverView
 GlobalDefaultGameMode=/Script/JK2.JK2GameModeBase
-GameInstanceClass=/Script/JK2.JK2GameInstance
+GameInstanceClass=/Game/Blueprints/System/BP_JK2GameInstance.BP_JK2GameInstance_C
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
